--- a/index.html
+++ b/index.html
@@ -47,24 +47,35 @@
         </div>
 
         <div class="estudante-div">
-          <img class="estudante-imagem" src="estudante_menina.png" alt="Foto dos alunos da Turma Desenvolvimento de Sistemas" />
+          <img class="estudante-imagem" src="estudante_menino.png" alt="Foto dos alunos da Turma Desenvolvimento de Sistemas" />
           <h3 class="estudante-nome">Aluno 4</h3>
-          <a href="https://cursos.alura.com.br/dashboard"></a>
-          <p></p>
-          <a href>
-            <img class="estudante-icone" src="logo_nossa_escola.png" alt="Link do Site da escola" />
-          </a>
-          <a href>
-            <img class="estudante-icone" src="instagram.png" alt="Link do Instagram" />
-          </a>
-          <a href>
-            <img class="estudante-icone" src="facebook.png" alt="Link do Facebook" />
-          </a>
+          <a href="https://cursos.alura.com.br/dashboard">https://cursos.alura.com.br/dashboard</a>
+          <img class="estudante-icone" src="logo_nossa_escola.png" alt="Link do Site da escola" />
+          <img class="estudante-icone" src="instagram.png" alt="Link do Instagram" />
+          <img class="estudante-icone" src="facebook.png" alt="Link do Facebook" />
         </div>
 
         <div class="estudante-div">
-          <img class="estudante-imagem" src="estudante_menina.png" alt="Foto dos alunos da Turma Desenvolvimento de Sistemas" />
+          <img class="estudante-imagem" src="estudante_menino.png" alt="Foto dos alunos da Turma Desenvolvimento de Sistemas" />
           <h3 class="estudante-nome">Aluno 5</h3>
+          <a href="https://cursos.alura.com.br/dashboard">https://cursos.alura.com.br/dashboard</a>
+          <img class="estudante-icone" src="logo_nossa_escola.png" alt="Link do Site da escola" />
+          <img class="estudante-icone" src="instagram.png" alt="Link do Instagram" />
+          <img class="estudante-icone" src="facebook.png" alt="Link do Facebook" />
+        </div>
+
+        <div class="estudante-div">
+          <img class="estudante-imagem" src="estudante_menino.png" alt="Foto dos alunos da Turma Desenvolvimento de Sistemas" />
+          <h3 class="estudante-nome">Aluno 6</h3>
+          <a href="https://cursos.alura.com.br/dashboard">https://cursos.alura.com.br/dashboard</a>
+          <img class="estudante-icone" src="logo_nossa_escola.png" alt="Link do Site da escola" />
+          <img class="estudante-icone" src="instagram.png" alt="Link do Instagram" />
+          <img class="estudante-icone" src="facebook.png" alt="Link do Facebook" />
+        </div>
+
+        <div class="estudante-div">
+          <img class="estudante-imagem" src="estudante_menina.png" alt="Foto dos alunos da Turma Desenvolvimento de Sistemas" />
+          <h3 class="estudante-nome">Aluno 1</h3>
           <a href="https://cursos.alura.com.br/dashboard"></a>
           <p></p>
           <a href>
@@ -80,7 +91,23 @@
 
         <div class="estudante-div">
           <img class="estudante-imagem" src="estudante_menina.png" alt="Foto dos alunos da Turma Desenvolvimento de Sistemas" />
-          <h3 class="estudante-nome">Aluno 6</h3>
+          <h3 class="estudante-nome">Aluno 2</h3>
+          <a href="https://cursos.alura.com.br/dashboard"></a>
+          <p></p>
+          <a href>
+            <img class="estudante-icone" src="logo_nossa_escola.png" alt="Link do Site da escola" />
+          </a>
+          <a href>
+            <img class="estudante-icone" src="instagram.png" alt="Link do Instagram" />
+          </a>
+          <a href>
+            <img class="estudante-icone" src="facebook.png" alt="Link do Facebook" />
+          </a>
+        </div>
+
+        <div class="estudante-div">
+          <img class="estudante-imagem" src="estudante_menina.png" alt="Foto dos alunos da Turma Desenvolvimento de Sistemas" />
+          <h3 class="estudante-nome">Aluno 3</h3>
           <a href="https://cursos.alura.com.br/dashboard"></a>
           <p></p>
           <a href>
@@ -102,7 +129,7 @@
 
         <div class="estudante-div">
           <img class="estudante-imagem" src="estudante_menina.png" alt="Foto dos alunos da Turma Desenvolvimento de Sistemas" />
-          <h3 class="estudante-nome">Aluno 1</h3>
+          <h3 class="estudante-nome">Aluno 4</h3>
           <a href="https://cursos.alura.com.br/dashboard">https://cursos.alura.com.br/dashboard</a>
           <img class="estudante-icone" src="logo_nossa_escola.png" alt="Link do Site da escola" />
           <img class="estudante-icone" src="instagram.png" alt="Link do Instagram" />
@@ -111,7 +138,7 @@
 
         <div class="estudante-div">
           <img class="estudante-imagem" src="estudante_menina.png" alt="Foto dos alunos da Turma Desenvolvimento de Sistemas" />
-          <h3 class="estudante-nome">Aluno 2</h3>
+          <h3 class="estudante-nome">Aluno 5</h3>
           <a href="https://cursos.alura.com.br/dashboard">https://cursos.alura.com.br/dashboard</a>
           <img class="estudante-icone" src="logo_nossa_escola.png" alt="Link do Site da escola" />
           <img class="estudante-icone" src="instagram.png" alt="Link do Instagram" />
@@ -120,7 +147,7 @@
 
         <div class="estudante-div">
           <img class="estudante-imagem" src="estudante_menina.png" alt="Foto dos alunos da Turma Desenvolvimento de Sistemas" />
-          <h3 class="estudante-nome">Aluno 3</h3>
+          <h3 class="estudante-nome">Aluno 6</h3>
           <a href="https://cursos.alura.com.br/dashboard">https://cursos.alura.com.br/dashboard</a>
           <img class="estudante-icone" src="logo_nossa_escola.png" alt="Link do Site da escola" />
           <img class="estudante-icone" src="instagram.png" alt="Link do Instagram" />
